fix manifest; update section spacing

--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ main {
 }
 
 section {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 
 h2 {
